--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -364,37 +364,173 @@ The style file, \,\verb+puctesis.sty,+\, and the document class \,\verb+puctesis
 
 \section{Líderes y desarrollo}
 
-¿Qué factores influyen en el desarrollo económico de los países? Ante esta pregunta solo una pequeña fracción de  investigadores ha centrado su atención sobre el potencial rol de los líderes que gobiernan estos países. La vasta literatura en crecimiento, en cambio,  se ha enfocado en el efecto de factores característicos del país  y políticas económicas mantenidas en el tiempo. \citeA{barro1996determinants} señala que el crecimiento es favorecido por expectativas de vida y escolaridad más altas, una menor tasa de fertilidad, menor consumo de gobierno y bajas tasas de inflación. También se ha encontrado una relación con  factores geográficos (e.g. acceso al mar y condiciones climáticas) \cite{Sachs1997} y étnicos \cite{easterly1997africa}. Por último, divesas publicaciones se centran en el rol de las instituciones como motores de crecimiento económico \cite{Acemoglu2005385,Dawson1998Inst,Rodrik2000,Dollar2003133}.   
 
-como expectativas de vida, escolaridad y tasa de fertilidad y  en el efecto de políticas económicas mantenidas en el tiempo, como bajas tasas de inflación y bajo gasto de gobierno \cite{barro1996determinants}.
- 	
-Pero se puede argumentar que la labor de los líderes al mando de un país es también un factor a considerar. El diseño institucional, incluso en las democracias más avanzadas, a menudo facilita que presidentes y primeros ministros puedan dejar una impronta personal en decisiones y políticas de estado, y así influir significativamente en el progreso económico de las naciones. En efecto, investigaciones recientes muestran que los líderes nacionales cumplen un rol importante afectando el crecimiento económico de sus países \cite{jones2004leaders,besley2011educated, besley2010political}. 
-Estos estudios indican que la alternacia de líderes en el poder induce cambios en el crecimiento del Producto Interno Bruto (PIB) de los países \cite{jones2004leaders} y que la dirección de estos cambios podría ser explicada, en parte, por características personales de los líderes tales como sus estudios \cite{besley2011educated}.
-Esta  evidencia motiva la examinación de otras variables macroeconómicas que podrían ser directamente afectadas por las políticas implementadas por los líderes. 
+		\begin{flushright}
+	\textit{``The history of the world is\\but the biography of great men.''}\\
+	 {\sc ---Thomas Carlyle} (1840)
+\end{flushright}
 
-Un candidato ideal a analizar es la apertura comercial de un país, variable que agrega importaciones y exportaciones  en un período determinado. Históricamente se ha sostenido la idea de que la apertura al comercio internacional acelera el desarrollo de los países \cite{Dollar2004}. Diversos estudios han concluido que , es  decir que facilitan o promueven flujos de importaciones y exportaciones, tienen mejor desempeño económico \cite{Dollar2004, berg2003trade,Wacziarg2008}. Flujos de FDI también afectan positivamente el crecimiento \cite{Azman-Saini2010, Borensztein1998}. 
-Por lo que sin duda el estudio del desarrollo o crecimiento de  importaciones, exportaciones y flujos de FDI es relevante. 
+¿Qué factores influyen en el desarrollo económico de los países? Ante esta pregunta solo una pequeña fracción de  los economistas ha centrado su atención sobre el potencial rol de los líderes que gobiernan estos países. La vasta literatura en desarrollo se ha enfocado, en cambio,   en el efecto de factores característicos del país  y políticas económicas mantenidas en el tiempo. 
 
-Por otro lado, generalmente un mandatario tiene la capacidad de implementar políticas que tendrán efectos tangibles y pronosticables en el intercambio comercial. Por ejemplo, los gobiernos pueden aplicar barreras comerciales como aranceles, licencias de importación y exportación, cuotas o subsidios para restringir importaciones. Estas medidas buscan generalmente proteger industrias locales y empleos de la competencia extranjera. Por otra parte, la evidencia empírica sugiere que la apertura de la economía aumenta el crecimiento \cite{Wacziarg2008,Dollar2004}, por lo que existen incentivos para que los gobernantes reduzcan los aranceles y levanten otras barreras, ya sea unilateralmente, o multilateralmente a través de Tratados de Libre Comercio (TLC) con otros países.
+En una publicación altamente citada, \citeA{barro1996determinants} señala que el crecimiento es favorecido por expectativas de vida y escolaridad más altas, una menor tasa de fertilidad, menor consumo de gobierno y bajas tasas de inflación. También se han encontrado relaciones  con  factores geográficos (e.g. acceso al mar y condiciones climáticas) \cite{Sachs1997} y étnicos \cite{easterly1997africa}. 
 
+Pero, aunque ha sido bien establecido que el desarrollo económico de los países está determinado por factores estructurales o bien de largo alcance, existe evidencia de que los países experimentan cambios bruscos en el crecimiento en cortos horizontes de tiempo \cite{Easterly1993}. Como señalan \citeA{jones2004leaders}, la explicación a estos movimientos bruscos difícilmente se halla en las variables estructurales o de largo alcance típicamente usadas para explicar el crecimiento. Eventos de más corta duración como \textit{shocks} o alternancias en el poder podrían proveer una mejor explicación.
 
-
-El tema que se aborda en esta memoria es el rol de los líderes nacionales en el desarrollo del comercio exterior de los países. El primer objetivo de este estudio es examinar si la labor de mandatarios afecta en alguna medida el crecimiento de variables tres variables macroeconómicas claves: importaciones, exportaciones y FDI. Posteriormente, bajo la hipótesis de que los líderes sí influyen, se plantea la cuestión central de esta investigación: ¿cómo afecta la personalidad de los líderes?...
+Por otro lado, diversas publicaciones se centran en el rol de las instituciones como motores de crecimiento económico \cite{Acemoglu2005385,Dawson1998Inst,Rodrik2000,Dollar2003133}. En esta línea \citeA{Acemoglu2005385} sostienen que las instituciones determinan los incentivos y las restricciones de los actores políticos, con lo cual causan diferencias en la actividad económica. Esto es matizado por \citeA{Dollar2003133}, quien señala que tanto las instituciones como el comercio internacional afectan el crecimiento en el largo plazo, pero que en horizontes más cortos el rol de las instituciones es más bien menor.
 
 
+Pero sin restar importancia al rol de las instituciones, es posible argumentar que los líderes pueden jugar un papel importante afectando el desarrollo de las naciones. Pues, incluso en las democracias más avanzadas, el diseño institucional a menudo facilita que presidentes y primeros ministros puedan dejar una impronta personal en decisiones y políticas de estado, y así influir significativamente en el progreso económico, al menos en el corto plazo.
 
-Trabajos recientes muestran que los líderes cumplen un rol importante afectando el crecimiento económico de los países (Besley et al., 2011; Jones y Olken, 2005). Además, un número creciente de estudios teóricos y empíricos sugieren que la calidad de las políticas es afectada por las características de los líderes que las implementan. La mayoría de estos estudios se ha centrado en características tales como el sexo (Gagliarducci y Paserman, 2011; Washington, 2008), la educación (Brollo y Troiano, 2014; Besley et al., 2011), o la edad (Alesina et al., 2015).
+Lo anterior ha sido observado por algunos economistas. En efecto, un número creciente de  investigaciones muestra que los líderes nacionales cumplen un rol importante afectando el crecimiento económico de sus países \cite{jones2004leaders,besley2011educated, besley2010political}. Los primeros en establecer esta relación fueron \citeA{jones2004leaders}, quienes estudiaron los cambios en el crecimiento que se producen en los años en que un líder deja el poder para ser reemplzado por otro. \citeA{jones2004leaders} concluyen que la alternancia de líderes en el poder causa cambios en el crecimiento que no pueden ser explicados por otros factores. Posteriormente \citeA{besley2011educated} confirman este resultado y van más allá al estudiar cómo el nivel educacional alcanzado por los líderes puede explicar sus desempeños en el cargo. Sus resultados indican que líderes con altos niveles de educación (magíster o doctorado) están relacionados con mayores tasas de crecimiento económico.
+
+Esta evidencia respalda la teoría de que los mandatarios afectan significativamente la actividad económica de los países, mediante las decisiones que toman y las políticas que implementan. A la vez,   estas resultados motivan el estudio de otras variables macroeconómicas que podrían ser directamente afectadas por estas decisiones y políticas. En esta memoria planteamos que un candidato ideal para tal estudio es el comercio internacional de los países. Esto pues el comercio internacional no solo es una variable sumamente relevante en el estudio del desarrollo de los países, sino porque además es posible identificar una clara relación con las políticas que puede implementar un líder.
+
+\section{Líderes y comercio internacional}
+
+En este estudio usaremos el término comercio internacional para referirnos a la suma agregada de las importaciones y exportaciones de un país durante un periodo de tiempo determinado. 
+El comercio internacional es una componente fundamental de la actividad económica de un país y ha mostrado ser relevante para explicar el desarrollo económico. En efecto, \cite{Dollar2003133} indican que el comercio internacional tiene un rol importante explicando el crecimiento tanto en el corto como el largo plazo. 
+
+La evolución del comercio internacional de un país se relaciona con su grado de apertura comercial. La apertura comercial es ``la medida en que agentes locales e internacionales pueden comerciar sin costos (incluyendo demoras e incertidumbres) artificiales (i.e. impuestas por el gobierno) aparte de las que son impuestos en transacciones domésticas'' \cite{berg2003trade}. Estos costos artificiales se conocen como barreras comerciales. Existe un amplio consenso entre economistas en que la disminución de barreras comerciales y la consecuente apertura comercial acelera el desarrollo de los países y ayuda a que los países más pobres acorten distancias con los más desarrollados \cite{Dollar2004, berg2003trade,Wacziarg2008}.
 
 
-Diversos estudios sugieren que un grupo más amplio de características pueden afectar el desempeño de los jefes de estado y la forma en que estos toman decisiones. Características relativas al medio socioeconómico de la persona durante su infancia pueden influir en los logros alcanzados en su vida. Por ejemplo, Carneiro y Heckman (2002, 2003) muestran que el crecer en una familia acomodada es el factor más importante que explica el ingreso a la universidad. Además, existe evidencia que características relativas a la trayectoria y experiencia profesional afectan al desempeño de los líderes. Trabajos como (Gehlcach et al., 2010; Diermeier et al., 2005) sugieren que empresarios y ejecutivos que llegan ocupar un cargo político tienen un mejor desempeño que políticos de profesión. Otros  trabajos estudian el efecto en el desempeño de líderes con experiencia militar previa (Bernmelech y Frydan, 2014). Por último, un amplio conjunto de resultados muestran una relación entre características relativas a la personalidad y factores tales como orientación política (Gerber et al., 2010, 2011), comportamiento de congresistas (Crichlow, 2002; Dietrich et al, 2012; Ramey et al. 2014) y preferencias de política exterior (Schoen, 2007).
+Generalmente un mandatario tiene la capacidad de implementar políticas que tendrán efectos tangibles y pronosticables sobre el comercio internacional. Por ejemplo, los gobiernos pueden aplicar barreras comerciales como aranceles, licencias de importación y exportación, cuotas o subsidios para restringir las transacciones internacionales. Este tipo de  medidas busca generalmente proteger industrias locales y empleos de la competencia extranjera. Por otro lado, los gobernantes pueden querer reducir estas barreras con el objetivo de  acelerar el crecimiento económico.
+
+Esta observación nos lleva a plantear la hipótesis de que los líderes ejercen un efecto en el comercio internacional a través de las políticas que aplican. Para probar esta hipótesis nos basamos en la metodología del ya citado artículo \cite{jones2004leaders}, que estudia el efecto de los líderes en el crecimiento. La idea clave de \cite{jones2004leaders} es enfocarse en líderes que dejaron el poder de forma inesperada, ya sea porque murieron o estaban demasiado enfermos para continuar en el cargo. De esta forma los autores pueden establecer una relación causal entre la salida de los líderes y el cambio en el crecimiento. Este análisis aplicado al cambio en el comercio internacional es expuesto en el capítulo \ref{ch:com_importan} de esta memoria. La principal conclusión de este capítulo es que los líderes sí afectan la evolución del comercio internacional de manera significativa.
 
 
+
+\section{¿La personalidad importa?}
+
+Luego de comprobar que los líderes afectan el crecimiento del comercio internacional, nos planteamos la pregunta sobre qué características personales influyen en el desempeño de los líderes. Un número creciente de estudios teóricos y empíricos sugieren que la calidad de las políticas es afectada por las características de los líderes que las implementan. La mayoría de estos estudios se ha centrado en características tales como el sexo \cite{gagliarducci2011gender,washington2006female}, la educación \cite{brollo2014happens,besley2011educated}, o la edad \cite{alesina2015old}.
+En esta investigación, en cambio, nos enfocamos en el efecto de las características psicológicas de los líderes en el crecimiento del intercambio comercial.
+
+ La elección de características psicológicas como variables explicativas en nuestro estudio no es arbitraria. Como señalan  \citeA{de1968psychological} y \citeA{Crichlow2005}, ``los tomadores de decisiones nunca responden a una situación propiamente tal, sino a su propia visión de ella'', por lo que es importante entender quiénes son los líderes y cómo ven el mundo para entender sus acciones. Esto es respaldado por numerosos estudios señalan la importancia de variadas características psicológicas en el comportamiento de políticos. Por ejemplo, se ha mostrado la influencia de rasgos psicológicos en la toma de decisiones relativas a relaciones internacionales \cite{Young1998}. La capacidad de un líder para confiar en otros se ha relacionado con su voluntad para realizar compromisos internacionales \cite{Hermann1980}. Incluso, las motivaciones personales de los presidentes se han relacionado con la probabilidad de entrar en guerra \cite{Winter1987}.
+ 
+ Por lo demás, algunos estudios han relacionado características psicológicas con posiciones frente al comercio internacional y a la apertura comercial. \citeA{Crichlow2002} muestra que ciertos atributos de personalidad (nivel de desconfianza hacia otros, percepción de control sobre el entorno y complejidad cognitiva) influyen en el voto de legisladores en temas referentes a la apertura económica y el libre comercio internacional. Los efectos de la personalidad frente a estos temas son significativos incluso después de controlar por partido e ideología del legislador. 
+ 
+ \citeA{Johnston2013} muestra que  características psicológicas influencian el apoyo a políticas proteccionistas. Las políticas proteccionistas se refieren a aquellas que buscan aumentar las barreras comerciales con el fin de proteger las industrias locales. Características tales como nivel de necesidad de seguridad y certeza favorecen el apoyo a este tipo de políticas.
+ 
+ En nuestro estudio nos enfocamos el modelo de rasgos de personalidad de los Cinco Grandes \cite{costa1992four}. Este modelo ha emergido como uno de los más aceptados y es sobre el que más se ha escrito. Las cinco dimensiones de este modelo --extraversión, apertura al cambio, amabilidad, responsabilidad e inestabilidad emocional-- describen aspectos de la personalidad sustancialmente distintos entre sí \cite{aluja2002comparative}, y a la vez entregan un panorama bastante completo de la personalidad de un individuo \cite{costa1992four}. 
+ 
+ Los Cinco Grandes han sido relacionados con aptitudes políticas \cite{Silvester2014}, preferencias políticas (e.g. conservador vs. liberal) \cite{Gerber2010,Carney2008}, preferencias en temas relativos a política internacional \cite{Schoen2007,Etheredge} y preferencias en variables relacionadas a la toma de decisiones como tiempo, aversión al riesgo y manejo de la incertidumbre \cite{Almlund2011,Anderson2011}. Pensamos que este conjunto de preferencias influye en las decisiones de los líderes en múltiples ámbitos, pero particularmente en lo referente a la política de comercio internacional.  
+ 
+La hipótesis central de esta memoria es que las diferencias de personalidad entre los líderes importan para la apertura comercial de los países, lo cual se ve reflejado en el crecimiento del comercio internacional. Más específicamente, se plantea que tres de los Cinco Grandes (extraversión, responsabilidad y amabilidad) se relacionan positivamente con el crecimiento del comercio internacional. Siguiendo \cite{Ramey2014}, obtenemos estimadores de los Cinco Grandes a partir de discursos políticos y modelos estadísticos que conectan indicios lingüísticos presentes en los textos con rasgos de personalidad. Luego se estudia la relación entre estos estimadores de personalidad y el crecimiento del comercio internacional promedio durante los mandatos de los líderes. Los resultados obtenidos comprueban las hipótesis planteadas.
 
 
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %   CAPITULO 2
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{LOS CINCO GRANDES}
+           
+\chapter{COMERCIO INTERNACIONAL: ¿LOS LÍDERES IMPORTAN?} \label{ch:com_importan}       
+
+\section{Descripción del Modelo} \label{model&tests}
+Vamos a modelar el crecimiento del comercio internacional de un país mediante el siguiente proceso:
+\begin{equation}\label{eq:model}
+g_{it}=\nu_i+\theta l_{it}+\varepsilon_{it},
+\end{equation}
+donde $g_{it}$ denota el crecimiento del comercio internacional en el país $i$ en el año $t$. $\nu_i$ es el efecto fijo del país  $i$ y $\varepsilon_{it}$ es un término de error con distribución normal $\mathcal{N}(0,\sigma_{\varepsilon i}^2 )$. El término $l_{it}$ representa la calidad del líder, la cual se asume fija para cada líder. Asumiremos que las transiciones de líderes ocurren según el siguiente modelo probabilístico:
+\begin{equation}
+l_{it}=\begin{cases} l_{it-1} &\mbox{con probabilidad } p(g_{it},g_{it-1},\dots) \\ 
+l' & \mbox{con probabilidad } 1-p(g_{it},g_{it-1},\dots), \end{cases}
+\end{equation}
+donde $l'\sim\mathcal{N}(\mu,\sigma_l^2 )$ y $\text{corr}(l,l')=\rho$. 
+
+Usaremos el índice $z$ para identificar transiciones de líderes. Definimos $\overline{PRE}_z$  como el crecimiento de PIB promedio en el  país en los $T$ antes de la transición $z$. Análogamente, definimos $\overline{POST}_z$  como el crecimiento promedio en los  $T$ posteriores a la transición $z$. Es decir,
+\begin{equation}\label{eq:pre_post}
+\overline{PRE}_z = \dfrac{1}{T}\sum_{\tau=1}^{T}g_{z_iz_t-\tau},\quad\overline{POST}_z = \dfrac{1}{T}\sum_{\tau=1}^{T}g_{z_iz_t+\tau},
+\end{equation}
+donde los índices $z_i$ y $z_t$ indican respectivamente el país y el año en que ocurre la transición $z$. Se sigue que el cambio en el crecimiento promedio durante la transición $z$ tiene la siguiente distribución normal:
+\begin{equation}\label{post_pre_dist}
+\overline{POST}_z- \overline{PRE}_z \sim \mathcal{N}\left( 0,\dfrac{2\sigma^2_{\varepsilon z_i}}{T} + 2\theta^2\sigma_l^2(1-\rho)\right) .
+\end{equation}
+
+Bajo la hipótesis nula de que los líderes no importan, $\theta=0$.  En consecuencia el cambio en el crecimiento $z$ tendrá la siguiente distribución: 
+\begin{equation}
+\overline{POST}_z- \overline{PRE}_z \sim \mathcal{N}\left( 0,\dfrac{2\sigma^2_{\varepsilon z_i}}{T}\right) .
+\end{equation}
+
+Elevando al cuadrado y normalizando obtenemos:  
+\begin{equation}\label{eq:chi1}
+\dfrac{\left(\overline{POST}_z- \overline{PRE}_z\right)^2}{2\sigma^2_{\varepsilon z_i}/T}\sim \chi^2(1).
+\end{equation}
+
+Supongamos que disponemos de un conjunto de $Z$ transiciones de líderes. Sumando (\ref{eq:chi1}) para todas las transiciones podemos definir el siguiente estadístico:
+\begin{equation}\label{eq:w-stat}
+W = \sum_{z=1}^{Z}\dfrac{\left(\overline{POST}_z- \overline{PRE}_z\right)^2}{2\sigma^2_{\varepsilon z_i}/T},
+\end{equation}
+el cual tiene una distribución chi cuadrado con $Z$ grados de libertad, $\chi^2 (Z)$. En (\ref{eq:w-stat}) podemos reemplazar $\sigma^2_{\varepsilon z_i}$ por su estimador $\widehat{\sigma^2_{\varepsilon z_i}}$ y dividir por $Z$ para obtener el estadístico $J$ usado en un test de Wald en \cite{jones2004leaders}:
+\begin{equation}
+J=\dfrac{1}{Z}\sum_{z=1}^{Z}\dfrac{\left(\overline{POST}_z- \overline{PRE}_z\right)^2}{2\widehat{\sigma^2_{\varepsilon z_i}}/T}.
+\end{equation}
+
+Para testear la hipótesis nula se usan los valores observados del estadístico $W$, más que los de $J$. Pero la magnitud de $J$ también nos proporciona información. Reordenando términos en la ecuación (\ref{post_pre_dist}) se obtiene 
+\begin{equation}\label{eq:theta}
+\theta^2=\dfrac{(J-1)\sigma_{\varepsilon}^2}{T \sigma_l^2(1-\rho)}.
+\end{equation}
+
+La ecuación (\ref{eq:theta}) permite estimar el parámetro $\theta$, que describe la magnitud de los efectos de los líderes en el crecimiento.  
+
+\section{Implementación de los tests estadísticos}
+Siguiendo la idea de \cite{jones2004leaders}, para implementar los tests estadísticos desarrollados en la sección previa vamos a estimar la siguiente regresión:
+\begin{equation}\label{eq:regression}
+g_{it} = \lambda^{PRE}_z PRE_z+\lambda^{POST}_z POST_z+\nu_i+\nu_t+\varepsilon_{it},
+\end{equation}
+donde $\nu_i$ y $\nu_t$ son efectos fijos de país y año respectivamente. Asumimos que el término de error tiene distribución normal con media 0 y varianza dependiente del país igual a $\sigma_{\varepsilon i}^2$. Para cada transición, indexada por $z$, hay dos variables indicatrices que denotamos $PRE_z$ and $POST_z$. $PRE_z$ es igual a 1 en los $T$ años previos al año de transición $z_t$ en el país $z_i$. De manera análoga, $POST_z$ es igual a 1 en los $T$ años posteriores al año de transición $z_t$ en el país $z_i$. En consecuencia, para cada transición estimamos un par de coeficientes $\lambda^{PRE}_z$ y $\lambda^{POST}_z$.    
+
+Usamos los resultados de la regresión (\ref{eq:regression}) para estimar los crecimientos pre y post en la ecuación (\ref{eq:pre_post}), mediante la ecuación
+\begin{equation}
+\overline{POST}_z - \overline{POST}_z \approx \lambda^{POST}_z - \lambda^{PRE}_z,
+\end{equation}
+y para estimar la varianza del término de error:
+\begin{equation}
+\widehat{\sigma^2_{\varepsilon z_i}}= \dfrac{1}{N_i-1}\sum_{k=1}^{N_i}(\varepsilon_{kt}-\overline{\varepsilon_{kt}})^2, \ \ \ \forall i,
+\end{equation}
+donde $N_i$ es el número de observaciones asociadas al país $i$.
+
+\section{Datos}
+\subsection{Crecimiento del comercio internacional}
+
+\cite{jones2004leaders} estiman la ecuación (\ref{eq:regression}) usando datos de crecimiento de PIB \textit{per capita} de la base de datos Penn World Tables version 6.1 \cite{heston2002penn}. Emplean la variable \textit{annual growth rate of real purchasing-power-parity GDP per capita (Constant prices: Chain series)} que entrega valores de crecimiento económico corregidos por diferencias en el poder de compra del dinero en los países y en el tiempo. Esta base de datos contiene observaciones de 178 países en el periodo 1950-2000.  
+
+\cite{besley2011educated} usan la variable \textit{annual growth rate of purchasing-power-parity GDP per capita} de la base de datos Maddison-Project (2003). Esta base contiene observaciones de 161 países en el periodo 1875-2003. 
+
+Por último, nuestra nueva base de datos usa la versión 2013 de la base de Maddison-Project, la cual extiende el periodo de observación hasta el año 2010. 
+
+\section{Líderes en la muestra}
+
+Un aspecto clave a considerar es que los volúmenes de importaciones y exportaciones en un año dependen en cierta medida de las condiciones económicas tanto domésticas como internacionales por las que atraviesa el país. A su vez, las condiciones económicas pueden precipitar la salida de un gobernante (considérese el caso de un mandatario que pierde la reelección por sus malos resultados económicos). Este aspecto plantea la siguiente dificultad metodológica: si el objetivo establecer que las transiciones de líderes causan variaciones en el crecimiento del comercio internacional, entonces es necesario que estas transiciones no estén relacionadas o influidas por las condiciones económicas en el país. De lo contrario se podría dar el caso en que las condiciones económicas influyen tanto la transición del líder como el cambio del crecimiento del comercio.
+
+Para enfrentar esta dificultad, la idea de \citeA{jones2004leaders} es centrarse en líderes que murieron mientras ocupaban el cargo, ya sea por causas naturales o por accidente. Estos autores sostienen que en tales casos el momento de la transición es efectivamente aleatorio y por lo tanto no está relacionado con las condiciones económicas que había en el país al momento de la transición. Consecuentemente, en este trabajo nos enfocamos en líderes que murieron en el cargo, ya sea por causas naturales o por accidente, y adicionalmente consideraremos aquellos que dejaron su cargo por causa de una grave enfermedad. De aquí en adelante nos referiremos a tales transiciones como transiciones aleatorias. Esta definición coincide con la empleada en \cite{besley2011educated}.
+
+Nuestra muestra de transiciones aleatorias se basa en la base de datos Archigos versión 3.0 \cite{goemans2009introducing}, la cual contiene información sobre líderes nacionales de 183 países, entre los años 1875 y 2013. Usamos la información que provee Archigos sobre la manera en que cada líder dejó el cargo para identificar los líderes que tuvieron una salida aleatoria. De esta forma identificamos 239 líderes con transiciones aleatorias. De estos, 23 son descartados pues estuvieron en el cargo por un periodo demasiado breve como para haber producido un impacto significativo y sostenido en la economía del país. Adicionalmente, otros 25 líderes son descartados pues su salida se sitúa demasiado pronto luego de otra transición aleatoria. Nuestra muestra contiene finalmente 191 transiciones aleatorias. De estas, 158 corresponden a líderes que murieron en el cargo (por causas naturales o debido a un accidente fatal) y 33 corresponden a líderes que se vieron forzados a renunciar debido a una grave enfermedad. Para más detalles sobre los criterios de selección de los líderes véase el apéndice \ref{ap:our_list}.
+
+\begin{figure}[h]
+	\centering
+	\begin{subfigure}[b]{\textwidth}
+		\includegraphics[width=\textwidth]{Figures/World_vsimple.pdf}
+		\caption{Distribution of leaders across countries}
+		\label{fig:world_map}
+	\end{subfigure}
+	\\ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
+	%(or a blank line to force the subfigure onto a new line)
+	\begin{subfigure}[b]{0.8\textwidth}
+		\includegraphics[width=\textwidth]{Figures/Year_distribution.pdf}
+		\caption{Distribution of leaders in time}
+		\label{fig:timeline}
+	\end{subfigure}
+	%~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
+	%(or a blank line to force the subfigure onto a new line)
+	\caption{Distribution of leaders with random transitions}
+	\medskip % induce some separation between caption and explanatory material
+	\begin{minipage}{\textwidth} % choose width suitably
+		{\footnotesize  Notes:  The map above shows the distribution of leaders with random transitions in our sample across countries. The timeline below shows how leaders with random transitions are distributed in time. The earliest random transition is in 1875, the latest in 2012.  \par}
+	\end{minipage}
+\end{figure}
+
+\section{Resultados} 
+
+ 
+\chapter{COMERCIO INTERNACIONAL Y LOS CINCO GRANDES}
 \section{Orígenes y propiedades de los Cinco Grandes}
 El modelo de los Cinco Grandes rasgos de personalidad ha emergido como el más aceptado para comparar medidas de personalidad entre individuos. Los orígenes de este modelo se remontan a los trabajos de \citeA{Allport1936} y \citeA{cattell1943description} quienes estudiaron términos presentes en el lenguaje para explicar diferencias de personalidad. Posteriormente, \citeA{fiske1949consistency} fue el primero en sugerir que con solo cinco factores es posible capturar gran parte de la variabilidad en diferencias de personalidad. El modelo de cinco factores, que incluye extraversión, apertura al cambio, estabilidad emocional, responsabilidad y amabilidad, fue conceptualizado en 1961 por \citeauthor{Tupes1992}. En las décadas posteriores numerosos estudios han mostrado la robustez del modelo para generar medidas de personalidad bajo diferentes muestras, contextos, lenguajes y culturas \cite{costa1992four,Goldberg1990, norman1963toward}[CitarRevisar: [CONGR]Costa and Mccrae, 1992; Goldberg 1990; Norman, 1963; John, Robinson and Pervin, 2010; [TWITTER] [10] [21] [27]; [POLARENA]John et al 2008ª, Yang et al. 1999]. Consecuentemente, este modelo ha alcanzado un alto grado de aceptación por muchos psicólogos[Citar: [43], [34]] y ningún otro modelo es objeto de tantos estudios como el de los Cinco Grandes \cite{John2008}.
 
@@ -478,74 +614,7 @@ Entre los Cinco Grandes, el factor responsabilidad ha sido el más consistente y 
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %   CAPITULO 2
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{METODOLOGÍA Y DATOS}
-\section{Primera etapa: estimando importaciones, exportaciones y FDI}
-El objetivo de la primera etapa es estimar el efecto neto del líder en la variable de interés (crecimiento de importaciones, crecimiento de exportaciones o FDI). Para ello seguiremos la metodología de \citeA{jones2004leaders}. Estos autores estudian el efecto de los líderes en el crecimiento del Producto Interno Bruto (PIB). Su idea es observar el valor crecimiento promedio en los cinco años previos a la salida de un líder (período PRE) y compararlo con el crecimiento promedio en los cinco años posteriores a la salida del líder (período POST). Al estudiar el cambio de crecimiento en un conjunto de transiciones de líderes, \citeA{jones2004leaders} muestran que los líderes tienen un efecto significativo en el crecimiento económico de sus países.
-\subsection{Modelo econométrico}
-Consideramos una muestra de transiciones de líderes nacionales. Cada transición está caracterizada por el año y por el país en que ocurre la salida del líder que deja el cargo. Estas transiciones son indexadas por el sub-índice $z$. 
-
-Denotamos por $Y$ la variable de interés, e $Y_{it}$ el valor que toma para el país $i$ en el año $t$. Además se define un plazo de observación $T$ (en el análisis principal se fijará $T$ igual a 5 años). El objetivo es estimar, para cada transición $z$, el valor promedio de $Y$ en los $T$ años previos a la transición, cantidad que denotamos por $\widehat{PRE}_z$. De igual manera, se quiere estimar el valor promedio de $Y$ en los $T$ años posteriores a la transición, cantidad que denotamos por $\widehat{POST}_z$. Para estimar ambas cantidades usamos el siguiente modelo de regresión:
-\begin{equation}
-\label{eq:model_reg1}
-Y_{it} = \lambda_z^{\text{PRE}}PRE_z + \lambda_z^{\text{POST}}POST_z + \nu_i + \nu_t + \epsilon_{it},
-\end{equation}
-La variable $PRE_z$ es una indicatríz que toma el valor 1 cuando $i$ coincide con el país de la transición $z$ y cuando $t$ está dentro de los $T$ años previos al año de la transición $z$ (el año mismo en que ocurre la transición no es considerado). Análogamente, la variable $POST_z$ es una indicatriz que toma el valor 1 en el país y en los $T$ años posteriores a la transición $z$. La regresión (\ref{eq:model_reg1}) incluye efectos fijos de país y año, denotados por $\nu_i$ y $\nu_t$ respectivamente. El término de error, $\epsilon_{it}$, se asume con distribución normal, de media nula y varianza dependiente del país denotada por $\sigma_{\epsilon i}^2$.
-
-Los coeficientes que resultan de estimar la regresión (\ref{eq:model_reg1}) se usan para estimar $\widehat{PRE}_z$ y $\widehat{POST}_z$ mediante la siguiente ecuación:
-\begin{equation}
-\label{eq:pre_post}
-\begin{aligned}
-\widehat{PRE}_z &:= \lambda_{z}^{\text{PRE}}\\
-\widehat{POST}_z &:= \lambda_{z}^{\text{POST}}.
-\end{aligned}
-\end{equation}
-Por último, definimos la diferencia promedio de la variable de interés como
-\begin{equation}
-\label{eq:delta}
-\Delta Y_z = \widehat{POST}_z - \widehat{PRE}_z.
-\end{equation}
-En nuestro análisis interpretamos $\Delta Y_z$ como el efecto que tiene la transición de líder $z$ sobre la variable $Y$. Específicamente, notamos $\Delta Imports_z$ para referirnos al cambio en el crecimiento de importaciones, $\Delta Exports_z$ para el cambio en el crecimiento de exportaciones y $\Delta FDI_z$ para el cambio en FDI. 
-
-\subsection{Datos}
-Examinamos el efecto de la personalidad de los líderes sobre tres variables de interés: crecimiento anual de las importaciones, crecimiento anual de las exportaciones y FDI medido como porcentaje del PIB. 
-
-Datos del crecimiento anual de importaciones y exportaciones y PIB por paridad de poder adquisitivo (PPA) per cápita se obtienen de la base de datos World Bank\footnote{Esta base de datos puede encontrarse en \url{http://data.worldbank.org/topic/economy-and-growth}}. Por otro lado, los datos de FDI como porcentaje del PIB fueron obtenidos de la base de datos CEIC Data?s Global Database \textbf{CITAR GLOBAL}.
-
-\section{Líderes en la muestra}
-La estrategia que seguimos en este estudio consta de dos etapas. En la primera etapa estimamos el efecto neto del líder sobre la variable de interés (importaciones, exportaciones o FDI). En la segunda etapa se estudia la relación entre este efecto neto y los Cinco Grandes que describen la personalidad del líder.  
-
-Un aspecto clave de la primera etapa es que el efecto neto del líder se obtiene al comparar el valor promedio de la variable de interés en los periodos antes y después de su salida o transición. Este aspecto plantea la siguiente dificultad metodológica: si el objetivo es estimar el efecto de las transiciones de líderes en el desarrollo de variables macro-económicas, entonces es necesario que estas transiciones no estén relacionadas o influidas por las condiciones económicas en el país. 
-
-Para enfrentar esta dificultad, seguimos la idea de \citeA{jones2004leaders} de centrarse en líderes que murieron mientras ocupaban el cargo, ya sea por causas naturales o por accidente. Estos autores sostienen que en tales casos el momento de la transición es efectivamente aleatorio y por lo tanto no está relacionado con las condiciones económicas que había en el país al momento de la transición. Además de los líderes que murieron en el cargo también consideramos aquellos que salieron por causa de una grave enfermedad. Tales salidas inesperadas serán referidas de aqui en adelante como transiciones de líderes aleatorias. Esta definición coincide con la empleada en \cite{besley2011educated}.
-
-La muestra de transiciones aleatorias usada en este estudio se construyó a partir de la  base de datos Archigos versión 3.0 \cite{goemans2009introducing}, la cual contiene información sobre líderes nacionales de 183 países, entre los años 1875 y 2013. Usamos la información que provee Archigos sobre la manera en que cada líder dejó el cargo para identificar los líderes que tuvieron una salida aleatoria. De esta forma identificamos 239 líderes con transiciones aleatorias. De estos, 23 son descartados pues estuvieron en el cargo por un periodo demasiado breve como para haber producido un impacto significativo y sostenido en las importaciones o exportaciones del país. Adicionalmente, otros 25 líderes son descartados pues su salida se sitúa demasiado pronto luego de otra transición aleatoria. La muestra contiene finalmente 191 transiciones aleatorias. De estas, 158 corresponden a líderes que murieron en el cargo (por causas naturales o debido a un accidente fatal) y 33 corresponden a líderes que se vieron forzados a renunciar debido a una grave enfermedad. Para más detalles sobre los criterios de selección de los líderes véase el apéndice \ref{ap:our_list}.
-
-\begin{figure}[h]
-	\centering
-	\begin{subfigure}[b]{\textwidth}
-		\includegraphics[width=\textwidth]{Figures/World_vsimple.pdf}
-		\caption{Distribución geográfica de los líderes en la muestra.}
-		\label{fig:world_map}
-	\end{subfigure}
-	\\ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
-	%(or a blank line to force the subfigure onto a new line)
-	\begin{subfigure}[b]{0.8\textwidth}
-		\includegraphics[width=\textwidth]{Figures/Year_distribution.pdf}
-		\caption{Distribución cronológica de los líderes en la muestra.}
-		\label{fig:timeline}
-	\end{subfigure}
-	%~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
-	%(or a blank line to force the subfigure onto a new line)
-	\caption{Distribución de los líderes con transiciones aleatorias. Fuente: elaboración propia.}
-	\label{fig:leader_dist}
-	\medskip % induce some separation between caption and explanatory material
-	\begin{minipage}{\textwidth} % choose width suitably
-		{\footnotesize  Notas:  El mapa (A) muestra la distribución geográfica de los líderes con transiciones aleatorias. La coloración del mapa indica el número de líderes provenientes de cada país. La línea de tiempo (B) muestra el número de transiciones aleatorias ocurridas en cada año durante el período comprendido entre 1870 y 2020.  \par}
-	\end{minipage}
-\end{figure}
-
-La Figura \ref{fig:leader_dist} muestra cómo los líderes con salidas aleatorias se distribuyen en los países y en los años que comprende este estudio. 
-Se observa en el mapa que la distriibución geográfico es uniforme y que todos los continentes están representados. De igual manera, la línea de tiempo muestra una distribución cuasi-uniforme de las transiciones aleatorias a lo largo del tiempo, con una frecuencia de transiciones levemente mayor a partir de 1960. 
+%\chapter{METODOLOGÍA Y DATOS}
 
 \section{Midiendo los Cinco Grandes}
 En este estudio se busca establecer una relación entre personalidad y desempeño de líderes nacionales, para lo cual se requiere una base de datos que permita analizar la relación entre estas variables. Sin embargo, a nuestro conocimiento,  no existe una base de datos con información sistemática de la personalidad de líderes nacionales. 
