--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1241,5 +1241,139 @@
 	keywords = "Trade",
 	keywords = "Growth "
 }
+@article{Easterly1993,
+	title = "Good policy or good luck? ",
+	journal = "Journal of Monetary Economics ",
+	volume = "32",
+	number = "3",
+	pages = "459 - 483",
+	year = "1993",
+	note = "",
+	issn = "0304-3932",
+	doi = "http://dx.doi.org/10.1016/0304-3932(93)90026-C",
+	url = "http://www.sciencedirect.com/science/article/pii/030439329390026C",
+	author = "William Easterly and Michael Kremer and Lant Pritchett and Lawrence H Summers",
+	keywords = "Economic growth ",
+	abstract = "Much of the new growth literature stresses country characteristics, such as education levels or political stability, as the dominant determinant of growth. However, growth rates are highly unstable over time, with a correlation across decades of 0.1 to 0.3, while country characteristics are stable, with cross-decade correlations of 0.6 to 0.9. Shocks, especially those to terms of trade, play a large role in explaining variance in growth. These findings suggest either that shocks are important relative to country characteristics in determining long-run growth, or that worldwide technological change determines long-run growth while country characteristics determine relative income levels. "
+}
+@article{Dreher2009169,
+	title = "The impact of political leaders' profession and education on reforms ",
+	journal = "Journal of Comparative Economics ",
+	volume = "37",
+	number = "1",
+	pages = "169 - 193",
+	year = "2009",
+	note = "Symposium: Labor Regulation In Developing CountriesSymposium: Labor Regulation In Developing Countries ",
+	issn = "0147-5967",
+	doi = "http://dx.doi.org/10.1016/j.jce.2008.08.005",
+	url = "http://www.sciencedirect.com/science/article/pii/S0147596708000693",
+	author = "Axel Dreher and Michael J. Lamla and Sarah M. Lein and Frank Somogyi",
+	keywords = "Reforms",
+	keywords = "Economic policy",
+	keywords = "Economic freedom",
+	keywords = "Leadership ",
+	abstract = "This paper analyzes whether the educational and professional background of a head of government matters for the implementation of market-liberalizing reforms. Employing panel data over the period 1970–2002, we present empirical evidence based on a novel data set covering profession and education of more than 500 political leaders from 72 countries. Our results show that reforms are more likely during the tenure of former entrepreneurs. Entrepreneurs belonging to a left-wing party are more successful in inducing reforms than a member of a right-wing party with the same previous profession. Former professional scientists also promote reforms, the more so, the longer they stay in office. The impact of politicians' education is not robust and depends on the method of estimation. Journal of Comparative Economics 37 (1) (2009) 169–193. "
+}
 
+@book{berg2003trade,
+	title={Trade, growth, and poverty: A selective survey},
+	author={Berg, Mr Andrew and Krueger, Anne O},
+	number={3-30},
+	year={2003},
+	publisher={International Monetary Fund}
+}
+@book{de1968psychological,
+	title={The psychological dimension of foreign policy},
+	author={De Rivera, Joseph},
+	year={1968},
+	publisher={CE Merrill Pub. Co.}
+}
+@article{Young1998,
+	abstract = {Cognition is central to the study of international affairs and underlies concepts such as power and interest. Yet, in spite of its importance, only recently have methodologies been developed to systematically analyze cognition. This essay begins by identifying the role that cognition plays in international politics; it then looks at some of the challenges faced in trying to assess cognition and how technology is assisting with these challenges. The heart of the article is a review of work from four different research programs on cognition: operational code analysis, cognitive mapping, image theory, and conceptual complexity. Each area is examined with regard to theoretical developments, methodological approaches, and the correspondence of its forecasts with observed behavior. The essay concludes by discussing the possibility of synthesizing these four approaches and by raising some unresolved issues in our understanding of cognition and its role in international phenomena.},
+	author = {Young, Michael D. and Schafer, Mark},
+	doi = {10.2307/254444},
+	file = {:C$\backslash$:/Users/Roberto/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Young, Schafer - 1998 - Is There Method in Our Madness Ways of Assessing Cognition in International Relations(2).pdf:pdf},
+	isbn = {0020-8833},
+	issn = {1079-1760},
+	journal = {Mershon International Studies Review},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {63--96},
+	title = {{Is There Method in Our Madness? Ways of Assessing Cognition in International Relations}},
+	url = {http://www.jstor.org/stable/254444$\backslash$nhttp://www.jstor.org.ubproxy.ub.uni-frankfurt.de/stable/pdfplus/254444.pdf?acceptTC=true},
+	volume = {42},
+	year = {1998}
+}
+@article{Winter1987,
+	abstract = {Three leader trait and leader-follower interaction models of leader appeal and leader performance are evaluated with data about the motive profiles of American presidents and American society, in both cases measured at a distance. Presidential appeal, defined in terms of electoral success, is significantly correlated with the congruence or match between the president's motive profile and that of his contemporary society. In contrast, presidential greatness, as rated by historians, as well as several important outcomes involving war and peace are associated with certain of the president's motives by themselves, but not with president-society congruence. (49 ref) (PsycINFO Database Record (c) 2012 APA, all rights reserved)},
+	author = {Winter, David G.},
+	doi = {10.1037/0022-3514.52.1.196},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/Winter 1987 JPSP Leader Appeal, Leader Performance.pdf:pdf},
+	isbn = {0022-3514},
+	issn = {0022-3514},
+	journal = {Journal of Personality and Social Psychology},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {196--202},
+	title = {{Leader appeal, leader performance, and the motive profiles of leaders and followers: A study of American presidents and elections.}},
+	volume = {52},
+	year = {1987}
+}
+@article{Johnston2013,
+	abstract = {Despite the increasing salience of issues related to free trade, research on citizen preferences over trade is sparse, and largely limited to economic explanations related to objective exposure. The present paper extends this literature by examining the psychological sources of the protectionist impulse. More specifically, I theoretically and empirically examine how citizens' chronic needs for security and certainty, key traits identified by recent work in the political realm, influence their preferences for protectionism. Examining data from three different national surveys in the U.S. context, I find strong support for the role of these dispositions. In addition to extending our understanding of the antecedents of trade preferences, the present paper has implications for the study of personality and politics, suggesting heterogeneity in the relationship of dispositions to ideology across issue domains. I also discuss the broader implications for American politics, arguing that these findings suggest latent tensions within contemporary party coalitions. [ABSTRACT FROM AUTHOR]},
+	author = {Johnston, Christopher D.},
+	doi = {10.1093/poq/nft004},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/Protectionsm 1.pdf:pdf},
+	issn = {0033362X},
+	journal = {Public Opinion Quarterly},
+	mendeley-groups = {Personality,Economic growth},
+	number = {2},
+	pages = {574--585},
+	title = {{Dispositional sources of economic protectionism}},
+	volume = {77},
+	year = {2013}
+}
+@article{Silvester2014,
+	author = {Silvester, Jo and Wyatt, Madeleine and Randall, Ray},
+	doi = {10.1111/joop.12038},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/politician personality machiavellianism.pdf:pdf},
+	isbn = {0963-1798},
+	issn = {20448325},
+	journal = {Journal of Occupational and Organizational Psychology},
+	keywords = {Personality,Political performance,Political skill,Political work,Politician},
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {258--279},
+	title = {{Politician personality, Machiavellianism, and political skill as predictors of performance ratings in political roles}},
+	volume = {87},
+	year = {2014}
+}
+@article{Almlund2011,
+	archivePrefix = {arXiv},
+	arxivId = {arXiv:1011.1669v3},
+	author = {Almlund, Mathilde and Duckworth, Angela L and Heckman, J J and Kautz, Tim D},
+	doi = {10.1016/B978-0-444-53444-6.00001-8},
+	eprint = {arXiv:1011.1669v3},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/personality economics.pdf:pdf},
+	isbn = {9780444534446},
+	issn = {15740692},
+	journal = {National Bureau of Economic Research},
+	keywords = {human development, person-situation debate,personality, behavioral economics, cognitive trait},
+	mendeley-groups = {Personality},
+	pmid = {25052830},
+	title = {{Personality psychology and economics}},
+	year = {2011}
+}
+@article{Anderson2011,
+	author = {Anderson, Jon and Burks, Stephen},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/WP{\_}integration{\_}of{\_}Personality.pdf:pdf},
+	journal = {Working Paper},
+	keywords = {decision theory,heavy truck accident,job performance,personality theory,strategic behavior,trucker},
+	mendeley-groups = {Personality},
+	pages = {1--46},
+	title = {{Toward the integration of personality theory and decision theory in the explanation of economic behavior}},
+	url = {http://www.cogsci.umn.edu/colloquia/colloquia{\_}S11/Aldo Rustichini.pdf},
+	volume = {2},
+	year = {2011}
+}
 
